--- a/github user search/src/App.css
+++ b/github user search/src/App.css
@@ -1,5 +1,19 @@
 .App {
   text-align: center;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.app-title{
+  font-size: 36px;
+  margin: 5px 0 20px 0;
+}
+
+.content-wrapper {
+  width: 600px;
 }
 
 .App-logo {
